# g2w

./: .gitignore  Cargo.toml  README.md  build.rs  examples.txt  notes.txt  tutorial.md
examples/: arrays.txt  basic.txt  person.src  polymorphism.src  polymorphism.txt
src/: ast.rs  ast2.rs  driver.rs  frontend.rs  llvm.rs  main.rs  parser.lalrpop  tests.rs  typechecker.rs
src/lexer/: mod.rs  tests.rs
src/parser/: mod.rs  tests.rs
src/tests/: 2d_array.src  arithmetic.src  complicated_separated_type_params.src  dynamic_sizeof.src  erased_hashtbl.src  erased_vec.src  erased_vec_in_monomorphic_function.src  erased_vec_passed_by_val.src  erased_within_separated_within_erased_struct.src  fields_of_erased_structs.src  fields_of_separated_structs.src  hello_world.src  libc_function_sets_errno.src  manually_monomorphized_vector.src  many_instantiations.src  mod.rs  null_literal_in_erased_argument.src  null_literal_in_separated_argument.src  pass_and_return_ptrs_to_DST.src  return_5.src  return_dst.src  separated_hashtbl.src  separated_vec.src  separated_vec_in_monomorphic_function.src  separated_vec_passed_by_val.src  short_circuit.src  simple_separated_function.src  stack_array.src
src/tests/temp/: arithmetic.ll  hello_world.ll  manually_monomorphized_vector.ll  placeholder.txt  return_5.ll  stack_array.ll
src/tests/typechecking/should_error/: array1.src  array2.src  assign_to_non_lvalue_proj.src  bad_call2.src  binop1.src  binop2.src  defining_an_extern_function.src  deref.src  duplicate_struct.src  duplicate_struct_fields.src  unop1.src  (+22 more)
test_programs/typechecking/should_error/: array2.src  bad_call1.src  bad_proj.src  bad_proj_assign.src  binop3.src  duplicate_func.src  duplicate_global.src  global_type.src  recursive_struct1.src  recursive_struct2.src  recursive_struct3.src  recursive_struct4.src  return_from_void.src  return_wrong.src  unknown_struct_in_decl.src  unknown_type_var_in_func_decl.src  unknown_type_var_in_generic.src  unknown_type_var_in_nongeneric.src  use_separated_func_in_erased_func.src  use_separated_struct_in_erased_func1.src  use_separated_struct_in_erased_func2.src  void_ptr.src
