[package]
name = "g2w"
version = "0.1.0"
authors = ["Robert Schabacker <rschabac@stevens.edu>"]
edition = "2018"

#needed for LALRPOP preprocessing
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The generated code depends on lalrpop-util.
#
# The generated tokenizer depends on the regex crate.
#
lalrpop-util = "0.19.6"
regex = "1"
#llvm-ir = { version = "0.7.4", features = ["llvm-11"] }
rayon = "1.5.1"
clap = "2.33.3"
tempfile = "3.2.0"
guess_host_triple = "0.1.2"
bumpalo = "3.7.0"
bumpalo-herd = "0.1.1"
unicode-segmentation = "1.8.0"
console = "0.14"

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
# If you do not supply your own, external lexer you also need the `lexer` feature
lalrpop = { version = "0.19.6", features = ["lexer"] }
