[package]
name = "g2w"
version = "0.1.0"
authors = ["Robert Schabacker <rschabac@stevens.edu>"]
edition = "2018"

#not very necessary, but there's some code in there to use lld on linux, which may speed up linking
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#llvm-ir = { version = "0.7.4", features = ["llvm-11"] }
rayon = "1.6"
clap = "2.33"
tempfile = "3.4"
guess_host_triple = "0.1"
bumpalo = "3.12"
bumpalo-herd = "0.1"
unicode-segmentation = "1.10"
console = "0.15"
